[package]
name = "fuwane-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuwane-foundation = { git = "https://github.com/fuwane/foundation.git" }
extism = "0.3.0"
tokio = { version = "1.28.0", features = ["sync"] }
songbird = { version = "0.3.1", features = ["driver"] }
once_cell = "1.17.1"
anyhow = "1.0.70"
serde = "1.0.160"
bitflags = "2.2.1"
