[package]
name = "fuwane-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuwane-foundation = { git = "https://github.com/fuwane/foundation.git" }
extism = "0.4.0"
tokio = { version = "1.28.2", features = ["sync"] }
songbird = { version = "0.3.2", features = ["driver"] }
once_cell = "1.17.2"
pollster = "0.3.0"
anyhow = "1.0.71"
serde = "1.0.163"
bitflags = "2.3.1"
serde_json = "1.0.96"