[package]
name = "fuwane-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.159"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "net"] }
futures = "0.3.28"
tokio-tungstenite = "0.18.0"
songbird = { version = "0.3.1", features = ["driver"] }
# WebSocket Feature
wav_io = { version = "0.1.8", optional = true }

[features]
default = []
wave_service = ["dep:wav_io"]